chore: update card style #1

--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -11,6 +11,10 @@
   object-fit: cover
 }
 
-::ng-deep .funding .mat-card-actions {
+::ng-deep .event .mat-card-actions {
   margin: 0 !important;
+}
+
+.mat-card-title {
+  min-height: 100px;
 }
