--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
@@ -12,6 +12,10 @@
     color: mat.get-color-from-palette($fem-readup-red, 400);
     margin-left: 8px;
   }
+
+  .mat-toolbar {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
 }
 
 .content {
