--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.html
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.html
@@ -4,6 +4,7 @@
     <img *ngIf="event.image == undefined" mat-card-image
          [attr.src]="'https://images.unsplash.com/photo-1526631655576-dc557ddce744?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80'"
          class="event-image" alt=""/>
+    <div *ngIf="event.category !== undefined" class="event-category">{{event.category}}</div>
     <mat-card-title>{{ event.title }}</mat-card-title>
     <mat-card-subtitle>{{ event.subtitle }}</mat-card-subtitle>
     <mat-card-content>
