--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -1,3 +1,9 @@
+@use '../../../../../../node_modules/@angular/material/index' as mat;
+@import '../../../../../styles';
+
+@include mat.core();
+@import '../../../../../theme-fem-readup-red';
+
 .container:hover {
   cursor: pointer;
   transform: scale(1.01);
@@ -9,6 +15,14 @@
 .event-image {
   max-height: 200px;
   object-fit: cover
+}
+
+::ng-deep .fem-readup-red-theme {
+  .event-category {
+    color: mat.get-color-from-palette($fem-readup-red-primary, 400);
+    font-weight: 600;
+    margin-bottom: 12px;
+  }
 }
 
 ::ng-deep .event .mat-card-actions {
