chore: add app subtitle into environment

--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
@@ -3,7 +3,7 @@
     <div style="position: relative">
       <app-logo></app-logo>
     </div>
-    <span class="title" *ngIf="media > mediaType.SMALL"> | Event-Suchmachine</span>
+    <span class="title" *ngIf="media > mediaType.SMALL"> | {{ appSubtitle }}</span>
     <div class="flexbox"></div>
   </div>
 </mat-toolbar>
