fix: title style

--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.scss
@@ -10,7 +10,7 @@
 
   .title {
     color: mat.get-color-from-palette($fem-readup-red, 400);
-    margin-left: 8px;
+    margin: 0 0 0 8px;
   }
 
   .mat-toolbar {
