chore: update title style in details page #4

--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
@@ -7,7 +7,7 @@
     </button>
     <div class="flexbox"></div>
     <div class="project-title">
-      <span class="title">{{ title }}</span>
+      <span class="title" *ngIf="media > mediaType.SMALL">{{ title }}</span>
     </div>
     <div class="flexbox"></div>
   </div>
