--- a/src/app/pages/overview/components/search-panel/search-panel.component.html
+++ b/src/app/pages/overview/components/search-panel/search-panel.component.html
@@ -7,4 +7,23 @@
                              (tagsChangedEmitter)="onCategoriesSelected($event)">
     </app-search-panel-topics>
   </ng-container>
+  <ng-container>
+    <h4>Zeitraum</h4>
+    <mat-form-field appearance="fill">
+      <mat-label>Gib einen Zeitraum an</mat-label>
+      <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+        <input matStartDate formControlName="start" placeholder="Start date"
+               [value]="startDate"
+               (dateChange)="onStartDateChanged($event)" (dateInput)="onStartDateChanged($event)">
+        <input matEndDate formControlName="end" placeholder="End date"
+               [value]="endDate"
+               (dateChange)="onEndDateChanged($event)" (dateInput)="onEndDateChanged($event)">
+      </mat-date-range-input>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-date-range-picker #picker></mat-date-range-picker>
+
+      <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Ungültiges Startdatum</mat-error>
+      <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Ungültiges Enddatum</mat-error>
+    </mat-form-field>
+  </ng-container>
 </div>
