--- a/src/app/pages/overview/pages/overview/overview.component.html
+++ b/src/app/pages/overview/pages/overview/overview.component.html
@@ -5,6 +5,8 @@
 <div [@searchPanelAnimation]="searchPanelState">
   <app-search-panel [categoriesValuesMap]="categoriesValuesMap"
                     [categoriesBackgroundColor]="categoriesBackgroundColor"
+                    [startDate]="startDate"
+                    [endDate]="endDate"
                     (categoriesSelectedEmitter)="onCategoriesSelected($event)"
                     (startDateSelectedEmitter)="onStartDateSelected($event)"
                     (endDateSelectedEmitter)="onEndDateSelected($event)">
