--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.scss
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.scss
@@ -1,46 +1,42 @@
-@use '../../../../../../node_modules/@angular/material/index' as mat;
+@use '~@angular/material' as mat;
+
+@import '../../../../../flex';
 @import '../../../../../styles';
 @import '../../../../../sizes';
-@import '../../../../../flex';
 
 @include mat.core();
-@import '../../../../../theme-fem-readup-red';
 
 .toolbar-menu-item {
   background: mat.get-color-from-palette(mat.$grey-palette, 50);
 }
 
 ::ng-deep .fem-readup-red-theme {
-  .logo-letter {
-    fill: mat.get-color-from-palette($fem-readup-red-primary, 500);
+  .title {
+    color: mat.get-color-from-palette($fem-readup-red-primary, 300);
+    font-family: "Rubik Moonrocks", serif;
+    font-size: 2.0rem;
   }
 
-  .title {
-    color: mat.get-color-from-palette($fem-readup-red-primary, 500);
-    margin: 8px;
+  .subtitle {
+    color: mat.get-color-from-palette($fem-readup-red, 400);
+    margin: 0 0 0 8px;
   }
 
   .mat-toolbar {
     background: mat.get-color-from-palette(mat.$grey-palette, 50);
   }
-
-  .menu-icon svg {
-    fill: mat.get-color-from-palette($fem-readup-red-primary, 500);
-  }
 }
 
 .content {
   width: 100%;
+
   @media #{$breakpoint-small} {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin: 10px;
   }
   @media #{$breakpoint-medium} {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px;
   }
   @media #{$breakpoint-large} {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin: 40px;
   }
 }
