--- a/src/app/pages/overview/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/pages/overview/overview.component.scss
@@ -1,9 +1,10 @@
-@use '~@angular/material' as mat;
+@use '../../../../../../node_modules/@angular/material/index' as mat;
+
+@import '../../../../../sizes';
+@import '../../../../../styles';
+@import '../../../../../flex';
 
 @include mat.core();
-
-@import '../../../../../styles';
-@import '../../../../../sizes';
 
 .content-overview, .toolbar {
   @media #{$breakpoint-small} {
@@ -21,7 +22,7 @@
 }
 
 .events-count {
-  color: mat.get-color-from-palette($fem-readup-red-primary, 500);
+  color: mat.get-color-from-palette($fem-readup-red-primary, 400);
   font-weight: 600;
   margin: 8px 8px 8px 16px;
 }
