chore: add calendar export button #6

--- a/src/app/pages/details/pages/details/details.component.html
+++ b/src/app/pages/details/pages/details/details.component.html
@@ -21,6 +21,10 @@
     Veranstaltungsdetails ansehen
   </button>
 
+  <button mat-stroked-button class="share-button" (click)="onCalendarButtonClicked(event)">
+    In Kalender speichern
+  </button>
+
   <div *ngIf="event.description != null" class="event-detailed-information">
     {{ event.description }}
   </div>
