--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.scss
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.scss
@@ -11,15 +11,11 @@
 }
 
 ::ng-deep .fem-readup-red-theme {
-  .title {
+  .toolbar-title {
     color: mat.get-color-from-palette($fem-readup-red-primary, 300);
     font-family: "Rubik Moonrocks", serif;
     font-size: 2.0rem;
-  }
-
-  .subtitle {
-    color: mat.get-color-from-palette($fem-readup-red, 400);
-    margin: 0 0 0 8px;
+    margin-top: 4px;
   }
 
   .mat-toolbar {
@@ -39,4 +35,8 @@
   @media #{$breakpoint-large} {
     margin: 40px;
   }
+}
+
+.button-placeholder {
+  width: 40px;
 }
