--- a/src/app/pages/details/pages/details/details.component.scss
+++ b/src/app/pages/details/pages/details/details.component.scss
@@ -24,15 +24,15 @@
 .content-details {
   @media #{$breakpoint-small} {
     margin: 0 auto;
-    padding: 10px;
+    padding: 0 32px;
     width: 100%;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box; /* Firefox, other Gecko */
     box-sizing: border-box; /* Opera/IE 8+ */
   }
   @media #{$breakpoint-medium} {
-    padding: 20px;
     margin: 0 auto;
+    padding: 20px;
     width: 450px;
   }
   @media #{$breakpoint-large} {
@@ -88,9 +88,9 @@ h1 {
 }
 
 .subtitle {
-  color: mat.get-color-from-palette(mat.$grey-palette, 700);
+  color: rgba(0, 0, 0, .54);
   font-size: 1.1em;
-  font-weight: bold;
+  font-weight: 400;
   margin-bottom: 32px;
 }
 
