--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.html
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="event" [ngClass]="isInThePast(event.end_date) ? 'event-past': ''">
+  <mat-card *ngIf="event != null" class="event" [ngClass]="isInThePast(event.end_date) ? 'event-past': ''">
     <img *ngIf="event.image !== undefined" mat-card-image [attr.src]="event.image" class="event-image" alt=""/>
     <img *ngIf="event.image == undefined" mat-card-image
          [attr.src]="'https://images.unsplash.com/photo-1526631655576-dc557ddce744?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80'"
@@ -8,8 +8,8 @@
 
     <div *ngIf="event.category !== undefined" class="event-category">{{event.category}}</div>
     <div class="card-header">
-      <mat-card-title>{{ event.title }}</mat-card-title>
-      <mat-card-subtitle>{{ event.subtitle }}</mat-card-subtitle>
+      <mat-card-title *ngIf="event.title != null">{{ event.title }}</mat-card-title>
+      <mat-card-subtitle *ngIf="event.subtitle != null">{{ event.subtitle }}</mat-card-subtitle>
     </div>
     <mat-card-content>
       <span>{{ formatDate(event.start_date, event.end_date) }}</span>
