--- a/src/app/pages/overview/pages/overview/overview.component.html
+++ b/src/app/pages/overview/pages/overview/overview.component.html
@@ -15,7 +15,7 @@
 
 <div class="content-overview">
 
-  <div class="events-count">{{ eventsMapFiltered.size }} Veranstaltungen gefunden</div>
+  <div class="events-count">{{ eventsMapFiltered.size }} anstehende Veranstaltungen</div>
 
   <app-event-list [eventsMap]="eventsMapFiltered"
                   (eventClickedEventEmitter)="onEventClicked($event)">
