--- a/src/app/pages/details/pages/details/details.component.scss
+++ b/src/app/pages/details/pages/details/details.component.scss
@@ -6,7 +6,7 @@
 
 @include mat.core();
 
-.content-overview, .toolbar {
+.toolbar {
   @media #{$breakpoint-small} {
     margin: 10px;
     padding-bottom: 20px;
@@ -23,9 +23,7 @@
 
 .content-details {
   @media #{$breakpoint-small} {
-    margin: 0 auto;
-    padding: 0 32px;
-    width: 100%;
+    margin: 20px;
     -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
     -moz-box-sizing: border-box; /* Firefox, other Gecko */
     box-sizing: border-box; /* Opera/IE 8+ */
