--- a/src/app/pages/overview/components/event-list/event-list.component.scss
+++ b/src/app/pages/overview/components/event-list/event-list.component.scss
@@ -10,7 +10,6 @@
 }
 
 .list-item {
-  margin: 10px;
 
   @media #{$breakpoint-large} {
     flex: 0 1 calc(30% - 10px);
@@ -19,6 +18,6 @@
     flex: 0 1 calc(45% - 10px);
   }
   @media #{$breakpoint-small} {
-    flex: 0 1 calc(100% - 10px);
+    flex: 0 1 calc(100%);
   }
 }
