chore: update menu button style

--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
@@ -9,7 +9,7 @@
     <span class="toolbar-title">{{ appTitle }}</span>
     <div class="flexbox"></div>
     <button *ngIf="nav.share"
-            mat-button
+            mat-icon-button
             class="toolbar-menu-item"
             (click)="onShareClicked()">
       <mat-icon class="menu-icon" [svgIcon]="'share-variant'"></mat-icon>
