--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
@@ -3,10 +3,10 @@
     <span class="toolbar-title">{{ appTitle }}</span>
     <span class="toolbar-subtitle" *ngIf="media > mediaType.SMALL" [@logoAnimation]="logoState"> | {{ appSubtitle }}</span>
     <div class="flexbox"></div>
-    <button mat-button class="toolbar-menu-item" (click)="onFilterClicked()">
+    <button mat-icon-button class="toolbar-menu-item" (click)="onFilterClicked()">
       <mat-icon [svgIcon]="'search'"></mat-icon>
     </button>
-    <button mat-button class="toolbar-menu-item" [@searchResetButtonAnimation]="searchPanelState"
+    <button mat-icon-button class="toolbar-menu-item" [@searchResetButtonAnimation]="searchPanelState"
             (click)="onResetFilterClicked()">
       <span *ngIf="media > mediaType.SMALL">FILTER ZURÜCKSETZEN</span>
       <mat-icon *ngIf="media < mediaType.MEDIUM" [svgIcon]="'filter-off-outline'"></mat-icon>
