--- a/src/app/pages/overview/components/event-list/event-list.component.scss
+++ b/src/app/pages/overview/components/event-list/event-list.component.scss
@@ -10,12 +10,14 @@
 }
 
 .list-item {
+  margin-right: 24px;
+  margin-bottom: 24px;
 
   @media #{$breakpoint-large} {
-    flex: 0 1 calc(30% - 10px);
+    flex: 0 1 calc(33% - 24px);
   }
   @media #{$breakpoint-medium} {
-    flex: 0 1 calc(45% - 10px);
+    flex: 0 1 calc(50% - 24px);
   }
   @media #{$breakpoint-small} {
     flex: 0 1 calc(100%);
