--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,11 @@ body {
   background: white;
   box-shadow: 0 2px 1px -1px #0003, 0 1px 1px 0 #00000024, 0 1px 3px 0 #0000001f;
 }
+
+::ng-deep .mat-toolbar-single-row {
+  padding: 0 !important;
+}
+
+::ng-deep .mat-button {
+  min-width: 0 !important;
+}
