--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,5 +6,13 @@
 @import '../sizes';
 
 .fem-readup-red-theme {
-  background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  @media #{$breakpoint-small} {
+    background: white;
+  }
+  @media #{$breakpoint-medium} {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
+  @media #{$breakpoint-large} {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
 }
