--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -1,8 +1,20 @@
 @use '../../../../../../node_modules/@angular/material/index' as mat;
 @import '../../../../../styles';
+@import '../../../../../sizes';
 
 @include mat.core();
 @import '../../../../../theme-fem-readup-red';
+
+.mat-card {
+  @media #{$breakpoint-small} {
+    box-shadow: unset !important;
+    margin-bottom: 64px;
+  }
+  @media #{$breakpoint-medium} {
+  }
+  @media #{$breakpoint-large} {
+  }
+}
 
 .container:hover {
   cursor: pointer;
