--- a/src/app/pages/details/pages/details/details.component.html
+++ b/src/app/pages/details/pages/details/details.component.html
@@ -4,8 +4,8 @@
 </app-details-toolbar>
 
 <div *ngIf="event != null" class="content-details">
-  <img *ngIf="event.image !== ''" mat-card-image class="event-banner"
-       [attr.src]="event.image">
+  <img *ngIf="event.image !== ''" mat-card-image class="event-banner lazyload"
+       [attr.data-src]="event.image">
   <div class="event-basic-information">
     <div *ngIf="event.category !== undefined" class="event-category">{{event.category}}</div>
     <h1>{{ event.title }}</h1>
