--- a/src/app/pages/details/pages/details/details.component.scss
+++ b/src/app/pages/details/pages/details/details.component.scss
@@ -74,7 +74,8 @@
   0 1px 3px 0 rgba(0, 0, 0, 0.12);
 
   width: 100%;
-  background: white;
+  max-height: 400px;
+  object-fit: cover
 }
 
 ::ng-deep .content-details .mat-card-image {
