--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@ html {
 
 body {
   height: 100%;
-  background: white;
+  background: #fafafa;
   color: mat.get-color-from-palette(mat.$grey-palette, 900);
   font-family: 'Centra Book', sans-serif;
   margin: 0;
