--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@use '~@angular/material' as mat;
+@use '@angular/material' as mat;
 
 @include mat.core();
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "@angular/material/prebuilt-themes/indigo-pink.css";
 @import 'theme-fem-readup-red';
 
 .fem-read-red-theme {
