chore(lighthouse): add ARIA labels to Material chip list

--- a/src/app/ui/tag-chips/selectable-tag-chips/selectable-tag-chips.component.html
+++ b/src/app/ui/tag-chips/selectable-tag-chips/selectable-tag-chips.component.html
@@ -1,4 +1,4 @@
-<mat-chip-list>
+<mat-chip-list aria-label="chip list">
   <mat-chip *ngFor="let tag of selectableTags"
             [style.color]="color"
             [style.border]="getBorder()"
