--- a/src/app/ui/tag-chips/tag-chips/tag-chips.component.html
+++ b/src/app/ui/tag-chips/tag-chips/tag-chips.component.html
@@ -1,4 +1,4 @@
-<mat-chip-list>
+<mat-chip-list aria-label="chip list">
   <app-tag-chip *ngFor="let tag of tags, index as i"
                 [title]="getTitle(i)"
                 [icon]="getIcon(i)"
