chore: remove non-animatable property from animation

--- a/src/app/pages/overview/pages/overview/overview.component.html
+++ b/src/app/pages/overview/pages/overview/overview.component.html
@@ -2,7 +2,7 @@
                       [searchPanelState]="searchPanelState"
                       (menuItemEventEmitter)="onMenuItemClicked($event)"></app-overview-toolbar>
 
-<div [@searchPanelAnimation]="searchPanelState">
+<div class="search-panel" [@searchPanelAnimation]="searchPanelState">
   <app-search-panel [categoriesValuesMap]="categoriesValuesMap"
                     [categoriesBackgroundColor]="categoriesBackgroundColor"
                     [startDate]="startDate"
