--- a/src/app/pages/overview/pages/overview/overview.component.scss
+++ b/src/app/pages/overview/pages/overview/overview.component.scss
@@ -21,6 +21,10 @@
   }
 }
 
+.search-panel {
+  overflow: hidden;
+}
+
 .events-count {
   color: mat.get-color-from-palette($fem-readup-red-primary, 400);
   font-weight: 600;
