chore: download past events only on demand #9

--- a/src/app/pages/overview/pages/overview/overview.component.html
+++ b/src/app/pages/overview/pages/overview/overview.component.html
@@ -9,7 +9,8 @@
                     [endDate]="endDate"
                     (categoriesSelectedEmitter)="onCategoriesSelected($event)"
                     (startDateSelectedEmitter)="onStartDateSelected($event)"
-                    (endDateSelectedEmitter)="onEndDateSelected($event)">
+                    (endDateSelectedEmitter)="onEndDateSelected($event)"
+                    (pastEventsSelectedEmitter)="onPastEventsSelected($event)">
   </app-search-panel>
 </div>
 
