--- a/src/app/pages/overview/components/event-list/event-list.component.html
+++ b/src/app/pages/overview/components/event-list/event-list.component.html
@@ -1,5 +1,5 @@
 <div class="list">
-  <app-event-list-item *ngFor="let event of events"
+  <app-event-list-item *ngFor="let event of events; trackBy: identify"
                          class="list-item"
                          [event]="event"
                          (click)="onEventClicked(event.id)">
