--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.scss
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.scss
@@ -13,7 +13,7 @@
 ::ng-deep .fem-readup-red-theme {
   .toolbar-title {
     color: mat.get-color-from-palette($fem-readup-red-primary, 300);
-    font-family: "Rubik Moonrocks", serif;
+    font-family: 'Rubik Moonrocks', serif;
     font-size: 2.0rem;
     margin-top: 4px;
   }
