--- a/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
+++ b/src/app/pages/details/components/details-toolbar/details-toolbar.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar>
   <div class="content flexcontainer">
     <button mat-icon-button class="toolbar-menu-item" aria-label="back" (click)="onBackClicked()">
-      <mat-icon class="menu-icon" [svgIcon]="'arrow-left'"></mat-icon>
+      <mat-icon aria-hidden="false" aria-label="arrow left" fontIcon="arrow_back"></mat-icon>
     </button>
     <div class="flexbox"></div>
     <span class="toolbar-title">{{ appTitle }}</span>
     <div class="flexbox"></div>
     <button *ngIf="nav.share" mat-icon-button class="toolbar-menu-item" aria-label="share"
             (click)="onShareClicked()">
-      <mat-icon class="menu-icon" [svgIcon]="'share-variant'"></mat-icon>
+      <mat-icon aria-hidden="false" aria-label="share" fontIcon="share"></mat-icon>
     </button>
     <div *ngIf="!nav.share" class="button-placeholder"></div>
   </div>
