--- a/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
+++ b/src/app/pages/overview/components/overview-toolbar/overview-toolbar.component.html
@@ -4,12 +4,12 @@
     <span class="toolbar-subtitle" *ngIf="media > mediaType.SMALL" [@logoAnimation]="logoState"> | {{ appSubtitle }}</span>
     <div class="flexbox"></div>
     <button mat-icon-button class="toolbar-menu-item" aria-label="filter" (click)="onFilterClicked()">
-      <mat-icon [svgIcon]="'search'"></mat-icon>
+      <mat-icon aria-hidden="false" aria-label="search" fontIcon="search"></mat-icon>
     </button>
     <button mat-button class="toolbar-menu-item" aria-label="reset filters"
             [@searchResetButtonAnimation]="searchPanelState" (click)="onResetFilterClicked()">
       <span *ngIf="media > mediaType.SMALL">FILTER ZURÜCKSETZEN</span>
-      <mat-icon *ngIf="media < mediaType.MEDIUM" [svgIcon]="'filter-off-outline'"></mat-icon>
+      <mat-icon aria-hidden="false" aria-label="filter" fontIcon="filter_list" *ngIf="media < mediaType.MEDIUM"></mat-icon>
     </button>
   </div>
 </mat-toolbar>
