--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -45,7 +45,15 @@
   padding: 4px 10px;
   font-weight: 600;
 
-  background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  @media #{$breakpoint-small} {
+    background: white;
+  }
+  @media #{$breakpoint-medium} {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
+  @media #{$breakpoint-large} {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
 }
 
 ::ng-deep .fem-readup-red-theme {
