--- a/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
+++ b/src/app/pages/overview/components/event-list-item/event-list-item.component.scss
@@ -37,9 +37,29 @@
   }
 }
 
-.event-image-label {
+.event-image-label-left {
   position: absolute;
   margin-left: -20px;
+  margin-top: -64px;
+  background: white;
+  padding: 4px 10px;
+  font-weight: 600;
+
+  @media #{$breakpoint-small} {
+    background: white;
+  }
+  @media #{$breakpoint-medium} {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
+  @media #{$breakpoint-large} {
+    background: mat.get-color-from-palette(mat.$grey-palette, 50);
+  }
+}
+
+.event-image-label-right {
+  position: absolute;
+  right: 0;
+  margin-right: -4px;
   margin-top: -64px;
   background: white;
   padding: 4px 10px;
