--- a/src/app/pages/details/pages/details/details.component.scss
+++ b/src/app/pages/details/pages/details/details.component.scss
@@ -93,6 +93,13 @@ h1 {
   margin-bottom: 32px;
 }
 
+.organizer {
+  color: rgba(0, 0, 0, 1.0);
+  font-size: 1.1em;
+  font-weight: 400;
+  margin-bottom: 32px;
+}
+
 .event-basic-information, .event-tags, .event-detailed-information, .project-action {
   margin-top: 20px;
   margin-bottom: 20px;
